--- a/contacto.html
+++ b/contacto.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Elliot Garamendi Desarrollador de tus sueños</title>
-    <link rel="stylesheet" href="./css/index.css">
+    <link rel="stylesheet" href="./css/contacto.css">
 </head>
 
 <body class="body">
@@ -29,30 +29,16 @@
             </div>
         </nav>
     </header>
-    
+
     <main class="main">
-        <article class="article">
-            <div class="article__container-portada">
-                <h1 class="article__title">Bienvenidos a ESUPELECT</h1>
-                <h4 class="article__subtitle">Tecnologías, Supervisión y Control</h4>
-            </div>
-        </article>
-
-        <article class="article">
-            <div class="article__container-descripcion">
-                <div class="article__descripcion">
-                    <h2 class="article__title-presentacion-h2">Quienes somos</h2>
-                    <p class="article__presentacion-p">ESUPELECT es una empresa dedicada a proveer servicios de supervisión
-                        de las instalaciones eléctricas (líneas de transmisión, subestaciones) del sistema interconectado nacional
-                        mediante el uso de drones.
-                    </p>
-                </div>
-                <figure class="article__figure-presentacion">
-                    <img src="./img/foto-descripcion.jpg" alt="" class="article__image-presentacion">
-                </figure>
-            </div>
-
-        </article>
+        <div class="form-container">
+            <h1 class="form__title-formulario">Escríbenos</h1>
+            <h3 class="form__subtitle-formulario">Consulta con nuestro equipo</h3>
+            <form action="" class="form">
+                <input type="text" placeholder="Nombre" class="form__input-nombre" required>
+                <input type="text" placeholder="Email" class="form__input-email" required>
+                <input type="text" placeholder="Teléfono" class="form__input-telefono" required>
+                <input type="text" placeholder="Mensaje" class="form__input-mensaje" required>
+            </form>
+        </div>
     </main>
-</body>
-</html>
