--- a/contacto.html
+++ b/contacto.html
@@ -39,6 +39,7 @@
                 <input type="text" placeholder="Email" class="form__input-email" required>
                 <input type="text" placeholder="Teléfono" class="form__input-telefono" required>
                 <input type="text" placeholder="Mensaje" class="form__input-mensaje" required>
+                <button class="form__button">Enviar</button>
             </form>
         </div>
     </main>
