Modifición. Se agrega staf

--- a/index.html
+++ b/index.html
@@ -53,6 +53,32 @@
             </div>
 
         </article>
+
+        <article class="article">
+            <div class="table-container">
+                <h1 class="article__descripcion-h1">Nuestro Staf</h1>
+                <table class="table">
+                    <th class="table__th">Nombre</th>
+                    <th class="table__th">Especialidad</th>
+                    <tr class="table__tr">
+                        <td class="table__td">Javier Melendez</td>
+                        <td class="table__td">Gerente General</td>
+                    </tr>
+                    <tr class="table__tr">
+                        <td class="table__td">Carlos Fuentes</td>
+                        <td class="table__td">Asesor de proyectos</td>
+                    </tr>
+                    <tr class="table__tr">
+                        <td class="table__td">Cristian Montalvo</td>
+                        <td class="table__td">Especialista en proyectos</td>
+                    </tr>
+                    <tr class="table__tr">
+                        <td class="table__td">Walter Espejo</td>
+                        <td class="table__td">Administrador</td>
+                    </tr>
+                </table>
+            </div>
+        </article>
     </main>
 </body>
 </html>
