--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Elliot Garamendi Desarrollador de tus sueños</title>
+    <title>ESUPELECT</title>
     <link rel="stylesheet" href="./css/index.css">
+
 </head>
 
 <body class="body">
@@ -13,7 +14,7 @@
         <nav class="header-nav">
             <div class="header-nav__container">
                 <a href="" class="header-nav__link-logo-container">
-                    <img src="./img/logo-pequeño.jpeg" alt="Logo Jose Arriola" class="header-nav__link-logo">
+                    <img src="./img/logo-pequeño.jpeg" alt="Logo ESUPELECT" class="header-nav__link-logo">
                 </a>
                 <ul class="header-nav__menu-link-list">
                     <li class="header-nav__menu-link-item">
