Modificacion html. Metatags Opengraph

--- a/index.html
+++ b/index.html
@@ -6,6 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ESUPELECT</title>
     <link rel="stylesheet" href="./css/index.css">
+    <meta name="title" content="ESUPELECT">
+    <meta name="description" content="Empresa supervisora de instalaciones eléctricas de transmisión">
+
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://josearriola2021.github.io/Reto-1-2/">
+    <meta property="og:title" content="ESUPELECT">
+    <meta property="og:description" content="Empresa supervisora de instalaciones eléctricas de transmisión">
+    <meta property="og:image" content="https://i.postimg.cc/44h9Nhkv/foto-opengraph-reto1-2.jpg">
+
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://josearriola2021.github.io/Reto-1-2/">
+    <meta property="twitter:title" content="ESUPELECT">
+    <meta property="twitter:description" content="Empresa supervisora de instalaciones eléctricas de transmisión">
+    <meta property="twitter:image" content="https://i.postimg.cc/44h9Nhkv/foto-opengraph-reto1-2.jpg">
 
 </head>
 
