Validaciones Formulario js seccion Contacto

--- a/login.html
+++ b/login.html
@@ -11,7 +11,7 @@
 </head>
 
 <body class="body">
-    <header class="header">
+    <header class="header z-10">
         <nav class="header-nav">
             <div class="header-nav__container">
                 <a href="" class="header-nav__link-logo-container">
@@ -48,7 +48,7 @@
     <main class="main">
       <article>
         <div class="min-h-screen flex items-center justify-center py-12 px-4 sm:px-6 lg:px-8">
-          <div class="max-w-md w-full space-y-8 p-16 bg-white shadow-md rounded -z-10">
+          <div class="max-w-md w-full space-y-8 p-16 bg-white shadow-md rounded">
             <div>
               <img class="mx-auto h-12 w-auto" src="https://tailwindui.com/img/logos/workflow-mark-indigo-600.svg" alt="Workflow">
               <h2 class="mt-6 text-center text-3xl font-extrabold text-gray-700">Inicia sesion</h2>
@@ -62,7 +62,7 @@
               <div class="rounded-md shadow-sm -space-y-px">
                 <div>
                   <label for="email-address" class="sr-only">Usuario</label>
-                  <input id="email-address" name="email" type="email" autocomplete="email" required class="appearance-none rounded-none block w-full px-3 py-2 border border-gray-300 placeholder-gray-500 text-gray-900 rounded-t-md focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 focus:z-10 sm:text-sm" placeholder="Email o Usuario">
+                  <input id="email-address" name="email" type="text" autocomplete="email" required class="appearance-none rounded-none block w-full px-3 py-2 border border-gray-300 placeholder-gray-500 text-gray-900 rounded-t-md focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 focus:z-10 sm:text-sm" placeholder="Email o Usuario">
                 </div>
                 <div>
                   <label for="password" class="sr-only">Password</label>
@@ -81,7 +81,7 @@
                 </div>
               </div>
 
-              <div class="-z-10">
+              <div>
                 <button type="submit" class="group w-full relative flex justify-center py-2 px-4 border border-transparent text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
                     <span class="absolute left-0 inset-y-0 flex items-center pl-3">
                       <!-- Heroicon name: solid/lock-closed -->
