--- a/contacto.html
+++ b/contacto.html
@@ -9,6 +9,7 @@
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
 
+
 </head>
 
 <body class="body">
@@ -41,14 +42,14 @@
 
     <main class="main">
         <div class="form-container">
-            <h1 class="form__title-formulario">Escríbenos</h1>
+            <h1 class="form__title-formulario" id="escribe">Escríbenos</h1>
             <h3 class="form__subtitle-formulario">Consulta con nuestro equipo</h3>
-            <form action="" class="form">
-                <input type="text" placeholder="Nombre" class="form__input" required>
-                <input type="text" placeholder="Email" class="form__input" required>
-                <input type="text" placeholder="Teléfono" class="form__input" required>
-                <textarea class="form__textarea-mensaje" placeholder="Mensaje" required></textarea>
-                <button class="form__button">Enviar</button>
+            <form action="" class="form" id="formId">
+                <input type="text" placeholder="Nombre" class="form__input" id="formInputNombre" required>
+                <input type="text" placeholder="Teléfono" class="form__input" id="formInputTelefono" required>
+                <input type="email" placeholder="Email" class="form__input" id="formInputEmail" required>
+                <textarea class="form__textarea-mensaje" placeholder="Mensaje" id="formTextareaMensaje" required></textarea>
+                <button class="form__button" id="formButton">Enviar</button>
             </form>
         </div>
     </main>
@@ -61,6 +62,9 @@
             <a href="#" class="footer__figure-link"><i class="bi bi-linkedin"></i></a>
         </div>
     </footer>
+
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="./js/contacto.js" type="module"></script>
 
 </body>
 
